--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
-.centered{
-    text-align: center;
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .margin-top-bottom{
